--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
+black==21.10b0
 click==8.0.3
+dnspython==2.1.0
+email-validator==1.1.3
 Flask==2.0.2
 Flask-WTF==0.15.1
+idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.4.0
 python-dotenv==0.19.1
+regex==2021.11.2
+tomli==1.2.2
+typing-extensions==3.10.0.2
 Werkzeug==2.0.2
-WTForms[email]==2.3.3
+WTForms==2.3.3
