[config] Added SQLAlchemy

--- a/application/dev_config.cfg
+++ b/application/dev_config.cfg
@@ -3,5 +3,5 @@
 ENV="development"
 DEBUG=True
 SECRET_KEY="TestingTesting123"
-SESSION_PERMANENT= False
-SESSION_TYPE = "filesystem"
+SQLALCHEMY_DATABASE_URI = "sqlite:///database.db"
+SQLALCHEMY_TRACK_MODIFICATIONS = False
