--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ click==8.0.3
 dnspython==2.1.0
 email-validator==1.1.3
 Flask==2.0.2
+Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+greenlet==1.1.2
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.2
@@ -13,6 +15,7 @@ pathspec==0.9.0
 platformdirs==2.4.0
 python-dotenv==0.19.1
 regex==2021.11.2
+SQLAlchemy==1.4.26
 tomli==1.2.2
 typing-extensions==3.10.0.2
 Werkzeug==2.0.2
