--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,22 @@ greenlet==1.1.2
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.2
+joblib==1.1.0
 MarkupSafe==2.0.1
 mypy-extensions==0.4.3
+numpy==1.21.4
+pandas==1.3.4
 pathspec==0.9.0
 platformdirs==2.4.0
+python-dateutil==2.8.2
 python-dotenv==0.19.1
+pytz==2021.3
 regex==2021.11.2
+scikit-learn==1.0.1
+scipy==1.7.2
+six==1.16.0
 SQLAlchemy==1.4.26
+threadpoolctl==3.0.0
 tomli==1.2.2
 typing-extensions==3.10.0.2
 Werkzeug==2.0.2
