--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,58 @@
+attrs==21.2.0
 black==21.10b0
+certifi==2021.10.8
+charset-normalizer==2.0.7
 click==8.0.3
+cycler==0.11.0
 dnspython==2.1.0
 email-validator==1.1.3
 Flask==2.0.2
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+fonttools==4.28.1
 greenlet==1.1.2
+htmlmin==0.1.12
 idna==3.3
+ImageHash==4.2.1
 itsdangerous==2.0.1
 Jinja2==3.0.2
-joblib==1.1.0
+joblib==1.0.1
+kiwisolver==1.3.2
 MarkupSafe==2.0.1
+matplotlib==3.5.0
+missingno==0.5.0
+multimethod==1.6
 mypy-extensions==0.4.3
+networkx==2.6.3
 numpy==1.21.4
+packaging==21.3
 pandas==1.3.4
+pandas-profiling==3.1.0
 pathspec==0.9.0
+phik==0.12.0
+Pillow==8.4.0
 platformdirs==2.4.0
+pydantic==1.8.2
+pyparsing==3.0.6
 python-dateutil==2.8.2
 python-dotenv==0.19.1
 pytz==2021.3
+PyWavelets==1.2.0
+PyYAML==6.0
 regex==2021.11.2
+requests==2.26.0
 scikit-learn==1.0.1
 scipy==1.7.2
+seaborn==0.11.2
+setuptools-scm==6.3.2
 six==1.16.0
 SQLAlchemy==1.4.26
+tangled-up-in-unicode==0.1.0
 threadpoolctl==3.0.0
 tomli==1.2.2
+tqdm==4.62.3
 typing-extensions==3.10.0.2
+urllib3==1.26.7
+visions==0.7.4
 Werkzeug==2.0.2
 WTForms==2.3.3
