--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,38 @@
 black==21.10b0
 click==8.0.3
+cycler==0.11.0
 dnspython==2.1.0
 email-validator==1.1.3
 Flask==2.0.2
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+fonttools==4.28.1
 greenlet==1.1.2
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.2
+joblib==1.1.0
+kiwisolver==1.3.2
 MarkupSafe==2.0.1
+matplotlib==3.5.0
 mypy-extensions==0.4.3
+numpy==1.19.5
+packaging==21.3
 pathspec==0.9.0
+Pillow==8.4.0
 platformdirs==2.4.0
+pyparsing==3.0.6
+python-dateutil==2.8.2
 python-dotenv==0.19.1
 regex==2021.11.2
+scikit-learn==1.0.1
+scipy==1.7.2
+setuptools-scm==6.3.2
+six==1.16.0
 SQLAlchemy==1.4.26
+threadpoolctl==3.0.0
 tomli==1.2.2
 typing-extensions==3.10.0.2
 Werkzeug==2.0.2
 WTForms==2.3.3
+yellowbrick==1.3.post1
