[fix] Fix incorrect configuration for testing (sql db uri)

--- a/application/test_config.cfg
+++ b/application/test_config.cfg
@@ -3,5 +3,5 @@
 ENV="development"
 DEBUG=True
 SECRET_KEY="TestingTesting123"
-SQLALCHEMY_DATABASE_URI = "sqlite:///:memory"
+SQLALCHEMY_DATABASE_URI = "sqlite:///:memory:"
 SQLALCHEMY_TRACK_MODIFICATIONS = False
