--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==21.2.0
 black==21.10b0
 click==8.0.3
 cycler==0.11.0
@@ -9,6 +10,7 @@ Flask-WTF==0.15.1
 fonttools==4.28.1
 greenlet==1.1.2
 idna==3.3
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.2
 joblib==1.1.0
@@ -18,18 +20,26 @@ matplotlib==3.5.0
 mypy-extensions==0.4.3
 numpy==1.19.5
 packaging==21.3
+pandas==1.3.4
 pathspec==0.9.0
 Pillow==8.4.0
 platformdirs==2.4.0
+pluggy==1.0.0
+py==1.11.0
 pyparsing==3.0.6
+pytest==6.2.5
 python-dateutil==2.8.2
+python-dotenv==0.19.1
+pytz==2021.3
 regex==2021.11.2
 scikit-learn==1.0.1
 scipy==1.7.2
+seaborn==0.11.2
 setuptools-scm==6.3.2
 six==1.16.0
 SQLAlchemy==1.4.26
 threadpoolctl==3.0.0
+toml==0.10.2
 tomli==1.2.2
 typing-extensions==3.10.0.2
 Werkzeug==2.0.2
